--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</h3>
     </div>
     <div class="col-md-4">
       <div class="btn-group">
@@ -94,6 +94,8 @@
           [viewDate]="viewDate"
           [events]="events"
           [refresh]="refresh"
+          [locale]="locale"
+          [weekStartsOn]="weekStartsOn"
           [activeDayIsOpen]="activeDayIsOpen"
           (dayClicked)="dayClicked($event.day)"
           (eventClicked)="handleEvent('Clicked', $event.event)"
@@ -106,6 +108,8 @@
           [viewDate]="viewDate"
           [events]="events"
           [refresh]="refresh"
+          [locale]="locale"
+          [weekStartsOn]="weekStartsOn"
           (eventClicked)="handleEvent('Clicked', $event.event)"
           (eventTimesChanged)="eventTimesChanged($event)">
         </mwl-calendar-week-view>
@@ -113,132 +117,143 @@
         <ul>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
           </li>
 
           <li>
-            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</div>
+            <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
             <mwl-calendar-day-view
               *ngSwitchCase="'day'"
               [viewDate]="viewDate"
               [events]="events"
               [refresh]="refresh"
+              [locale]="locale"
               (eventClicked)="handleEvent('Clicked', $event.event)"
               (eventTimesChanged)="eventTimesChanged($event)">
             </mwl-calendar-day-view>
