--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -4,29 +4,29 @@
     <div class="col-md blue-bg col-l9">
 
 
-      <div class="row" rowh>
+      <div class="row">
       <div class="col-md-12 rowp">Namn: {{patient.Namn}}</div>
       </div>
 
 
-      <div class="row" rowh>
+      <div class="row">
         <div class="col-md-12 rowp">Personnummer: {{patient.Personnummer}}</div>
       </div>
 
 
-      <div class="row" rowh>
+      <div class="row">
         <div class="col-md-12 rowp">Operationstyp: {{patient.Operationstyp}} </div>
       </div>
 
 
-      <div class="row" rowh>
+      <div class="row">
         <div class="col-md-12 rowp">ICD10: {{patient.ICD10}}</div>
       </div>
 
     </div>
 
 
-    <div class="col-md-3" [ngClass]="patient.Bradskandegrad == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding: 5% 2% 0 2%; min-width: 80px; min-height: 100px text-align: center; font-size: x-large; height: auto"> {{patient.Bradskandegrad}}
+    <div class="col-md-3" [ngClass]="patient.Bradskandegrad == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding: 5% 2% 0 2%; min-width: 80px; min-height: 100px; text-align: center; font-size: x-large; height: auto"> {{patient.Bradskandegrad}}
       <div class="row-md" style="font-size: medium"> Tid kvar: <br> {{patient.Tid}}</div>
     </div>
 
