--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -39,17 +39,8 @@
 
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#" ><input type="checkbox"/>&nbsp;Alla</a>
-          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Akut</a>
-          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Elektiv</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Separated link</a>
-          <!--
-          <a class="dropdown-item" href="#" ><input type="checkbox"/>&nbsp;Alla</a>
-          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Another action</a>
-          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Something else here</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Separated link</a>
-          -->
+          <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('akut')" title="Akut"/>&nbsp;Akut</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('elektiv')" title="Elektiv"/>&nbsp;Elektiv</a>
         </div>
 
       </div>
