Started implementing filter (Communication)

--- a/Client/src/app/main/sidebar/planning/planning.component.html
+++ b/Client/src/app/main/sidebar/planning/planning.component.html
@@ -34,7 +34,7 @@
       <tr class="blank_row">
         <td colspan="3"></td>
       </tr>
-      
+
       <h4>Tid:</h4>
       <div class="col-md-12 rowp">Tid: {{patient.Tid}}</div>
       <div class="col-md-12 rowp">Brådskandegrad: {{patient.Bradskandegrad}}</div>
@@ -49,9 +49,11 @@
     <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#materiel_list" style="width: 100%">Materiellista</button>
     <div id="materiel_list" class="collapse" style="color: whitesmoke;">
 
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim enim sed velit tempor, commodo feugiat massa laoreet. Nunc rutrum facilisis lacinia. Nulla facilisi. Cras id feugiat est. Fusce quis feugiat sapien. Vivamus non sollicitudin tellus, non tempus sapien. In quis ligula enim.
+
+      Fusce vel tempus neque. Aenean vitae pulvinar sapien, sed maximus lectus. Mauris orci libero, mollis at purus eu, rutrum dignissim arcu. Etiam gravida felis sit amet orci hendrerit, nec mollis quam auctor. Maecenas fringilla non magna et ornare. Sed nibh diam, tempus quis sagittis sit amet, euismod quis neque. Quisque varius faucibus malesuada. Etiam at felis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed varius ullamcorper mauris, id sodales nisi tempor laoreet. Duis ut risus eget tellus pharetra scelerisque nec ut metus. Fusce neque orci, euismod ut turpis eu, viverra luctus urna.
+
+      Vivamus sit amet sapien nisi. Etiam venenatis magna vitae diam viverra vehicula. Donec consequat sodales ex, tincidunt vestibulum quam dictum ac. Curabitur a purus velit. In hac habitasse platea dictumst. Nulla quis diam turpis. Vestibulum vel gravida augue. Mauris ultricies, ipsum tristique auctor egestas, augue tellus fermentum metus, in volutpat leo sapien eu turpis. Morbi fringilla sem at neque vehicula suscipit. Phasellus maximus nisi id justo tincidunt, et consectetur nibh pulvinar. Suspendisse cursus auctor lacus a feugiat. Morbi placerat ligula eu consequat suscipit. Maecenas et justo augue. Sed dictum ligula nec dictum vestibulum. Suspendisse ipsum nunc, semper et odio sed, aliquam feugiat odio. Nam mollis nisi id metus porta egestas.
 
     </div>
   </div>
@@ -62,10 +64,11 @@
     <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#search_parameters" style="width: 100%">Sökparametrar</button>
     <div id="search_parameters" class="collapse" style="color: whitesmoke;">
 
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim enim sed velit tempor, commodo feugiat massa laoreet. Nunc rutrum facilisis lacinia. Nulla facilisi. Cras id feugiat est. Fusce quis feugiat sapien. Vivamus non sollicitudin tellus, non tempus sapien. In quis ligula enim.
 
+      Fusce vel tempus neque. Aenean vitae pulvinar sapien, sed maximus lectus. Mauris orci libero, mollis at purus eu, rutrum dignissim arcu. Etiam gravida felis sit amet orci hendrerit, nec mollis quam auctor. Maecenas fringilla non magna et ornare. Sed nibh diam, tempus quis sagittis sit amet, euismod quis neque. Quisque varius faucibus malesuada. Etiam at felis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed varius ullamcorper mauris, id sodales nisi tempor laoreet. Duis ut risus eget tellus pharetra scelerisque nec ut metus. Fusce neque orci, euismod ut turpis eu, viverra luctus urna.
+
+      Vivamus sit amet sapien nisi. Etiam venenatis magna vitae diam viverra vehicula. Donec consequat sodales ex, tincidunt vestibulum quam dictum ac. Curabitur a purus velit. In hac habitasse platea dictumst. Nulla quis diam turpis. Vestibulum vel gravida augue. Mauris ultricies, ipsum tristique auctor egestas, augue tellus fermentum metus, in volutpat leo sapien eu turpis. Morbi fringilla sem at neque vehicula suscipit. Phasellus maximus nisi id justo tincidunt, et consectetur nibh pulvinar. Suspendisse cursus auctor lacus a feugiat. Morbi placerat ligula eu consequat suscipit. Maecenas et justo augue. Sed dictum ligula nec dictum vestibulum. Suspendisse ipsum nunc, semper et odio sed, aliquam feugiat odio. Nam mollis nisi id metus porta egestas.
 
       <br>
       <br>
@@ -74,10 +77,11 @@
         <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#search-param" style="width: 100%">Lägg till sökparameter</button>
         <div id="search-param" class="collapse" style="color: whitesmoke;">
 
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim enim sed velit tempor, commodo feugiat massa laoreet. Nunc rutrum facilisis lacinia. Nulla facilisi. Cras id feugiat est. Fusce quis feugiat sapien. Vivamus non sollicitudin tellus, non tempus sapien. In quis ligula enim.
 
+          Fusce vel tempus neque. Aenean vitae pulvinar sapien, sed maximus lectus. Mauris orci libero, mollis at purus eu, rutrum dignissim arcu. Etiam gravida felis sit amet orci hendrerit, nec mollis quam auctor. Maecenas fringilla non magna et ornare. Sed nibh diam, tempus quis sagittis sit amet, euismod quis neque. Quisque varius faucibus malesuada. Etiam at felis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed varius ullamcorper mauris, id sodales nisi tempor laoreet. Duis ut risus eget tellus pharetra scelerisque nec ut metus. Fusce neque orci, euismod ut turpis eu, viverra luctus urna.
+
+          Vivamus sit amet sapien nisi. Etiam venenatis magna vitae diam viverra vehicula. Donec consequat sodales ex, tincidunt vestibulum quam dictum ac. Curabitur a purus velit. In hac habitasse platea dictumst. Nulla quis diam turpis. Vestibulum vel gravida augue. Mauris ultricies, ipsum tristique auctor egestas, augue tellus fermentum metus, in volutpat leo sapien eu turpis. Morbi fringilla sem at neque vehicula suscipit. Phasellus maximus nisi id justo tincidunt, et consectetur nibh pulvinar. Suspendisse cursus auctor lacus a feugiat. Morbi placerat ligula eu consequat suscipit. Maecenas et justo augue. Sed dictum ligula nec dictum vestibulum. Suspendisse ipsum nunc, semper et odio sed, aliquam feugiat odio. Nam mollis nisi id metus porta egestas.
         </div>
       </div>
 
