--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -39,8 +39,13 @@
 
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#" ><input type="checkbox"/>&nbsp;Alla</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('akut')" title="Akut"/>&nbsp;Akut</a>
           <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('elektiv')" title="Elektiv"/>&nbsp;Elektiv</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('akut')" title="Akut"/>&nbsp;Bokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('akut')" title="Akut"/>&nbsp;Ej Bokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" [checked]="filter('akut')" title="Akut"/>&nbsp;Preliminär Bokade</a>
         </div>
 
       </div>
