--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -43,7 +43,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><input type="checkbox" title="Akut"/>&nbsp;Bokade</a>
           <a class="dropdown-item" href="#"><input type="checkbox" title="Akut"/>&nbsp;Ej Bokade</a>
-          <a class="dropdown-item" href="#"><input type="checkbox" title="Akut"/>&nbsp;Preliminär Bokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" title="Akut"/>&nbsp;Preliminärbokade</a>
         </div>
 
       </div>
