--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -38,9 +38,8 @@
         </button>
 
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#" ><input type="checkbox"/>&nbsp;Alla</a>
-          <a class="dropdown-item" href="#"><input type="checkbox" (change)="filter('AKUT')" title="Akut"/>&nbsp;Akut</a>
-          <a class="dropdown-item" href="#"><input type="checkbox" (change)="filter('Elektiv')" title="Elektiv"/>&nbsp;Elektiv</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" (change)="akutChecked = !akutChecked; filter('AKUT', akutChecked)" title="Akut"/>&nbsp;Akut</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" (change)="elektivChecked = !elektivChecked; filter('Elektiv', elektivChecked)" title="Elektiv"/>&nbsp;Elektiv</a>
         </div>
 
       </div>
