--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -71,6 +71,13 @@
         [class.active]="view === 'day'">
         Dag
       </div>
+      <div
+        class="btn btn-primary"
+        (click)="view = 'summery'"
+        [class.active]="view === 'summery'">
+        Sammanfattning
+      </div>
+
     </div>
   </div>
 </div>
@@ -88,6 +95,8 @@
 <div class="row a">
   <div class="col col-a">
     <div [ngSwitch]="view">
+
+      <div id ="summery-cards" *ngSwitchCase="'summery'"><app-summery-cards></app-summery-cards></div>
 
       <mwl-calendar-month-view
         *ngSwitchCase="'month'"
