--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -16,5 +16,8 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  <button (click)="loginService.testLoggedIn();">test logged in</button>
+  <button (click)="loginService.logout();">logout</button>
+  <button (click)="loginService.login();">login</button>
 </ul>
 
