--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.css
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.css
@@ -28,12 +28,18 @@
    background-color: blue;
  }
 
-.col-md-12 {
+.col-md {
   font-size: medium;
 }
+
 
 .col-l9 {
   border-right-style: solid;
   border-color: #0d2b37;
   border-width: 5px;
+}
+
+.glyphicon{
+  font-size: 100%;
+  text-align: right;
 }
