--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -1,33 +1,35 @@
 <div class="container-fluid a" (click)="setPatient(patient); setPanel('planning')" style="padding: 2% 5% 2% 5%" >
-
   <div class="row row-s">
     <div class="col-md blue-bg col-l9">
 
 
       <div class="row">
-      <div class="col-md-12 rowp">Namn: {{patient.Namn}}</div>
+        <div class="col-md">Namn: {{patient.Namn}}</div>
+        <div class="col-md-2" *ngIf="patient.Bokad"><span class="glyphicon glyphicon-ok text-right" style="color: limegreen"></span> </div>
+        <div class="col-md-2" *ngIf="!patient.Bokad"><span class="glyphicon glyphicon-warning-sign text-right" style="color: orange"></span> </div>
+
+
       </div>
 
 
       <div class="row">
-        <div class="col-md-12 rowp">Personnummer: {{patient.Personnummer}}</div>
+        <div class="col-md">Personnummer: {{patient.Personnummer}}</div>
       </div>
 
 
       <div class="row">
-        <div class="col-md-12 rowp">Operationstyp: {{patient.Operationstyp}} </div>
+        <div class="col-md">Operationstyp: {{patient.Operationstyp}} </div>
       </div>
 
 
       <div class="row">
-        <div class="col-md-12 rowp">ICD10: {{patient.ICD10}}</div>
+        <div class="col-md">ICD10: {{patient.ICD10}}</div>
       </div>
 
     </div>
 
-
     <div class="col-md-3" [ngClass]="patient.Bradskandegrad == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding: 5% 2% 0 2%; min-width: 80px; min-height: 100px; text-align: center; font-size: x-large; height: auto"> {{patient.Bradskandegrad}}
-      <div class="row-md" style="font-size: medium"> Tid kvar: <br> {{patient.Tid}}</div>
+      <div class="row-md" style="font-size: medium"> Tid Kvar: <br> {{patient.Tid}}</div>
     </div>
 
 
