--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div class="col-md-3" [ngClass]="patient.Bradskandegrad == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding: 5% 2% 0 2%; min-width: 80px; min-height: 100px; text-align: center; font-size: x-large; height: auto"> {{patient.Bradskandegrad}}
+    <div class="col-md-3" [ngClass]="urgency == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding: 5% 2% 0 2%; min-width: 80px; min-height: 100px; text-align: center; font-size: x-large; height: auto"> {{urgency}}
       <div class="row-md" style="font-size: medium"> Tid Kvar: <br> {{patient.Tid}}</div>
     </div>
 
