--- a/Client/src/app/main/content/day-view/day-view.component.html
+++ b/Client/src/app/main/content/day-view/day-view.component.html
@@ -1,19 +1,12 @@
-
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col a" style="padding: 0; min-width: 300px">
-      <mwl-calendar-day-view
-        [viewDate]="viewDate"
-        [events]="events">
-      </mwl-calendar-day-view>
-    </div>
-    <div class="col a">
-      <mwl-calendar-day-view
-        [viewDate]="viewDate"
-        [events]="events">
-      </mwl-calendar-day-view>
-    </div>
-
-  </div>
-</div>
+<!--<div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>-->
+<li>
+  <mwl-calendar-day-view
+    [viewDate]="viewDate"
+    [events]="events"
+    [refresh]="refresh"
+    [locale]="locale"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
+    (eventTimesChanged)="eventTimesChanged($event)"
+    class="day-view-track">
+  </mwl-calendar-day-view>
+</li>
