--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,1 +1,2 @@
-<div><app-main></app-main></div>
+<div *ngIf="loginService.loggedIn"><app-main></app-main></div>
+<div *ngIf="!loginService.loggedIn"><app-login></app-login></div>
