--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,3 +1,3 @@
-<p>
-  login works!
-</p>
+Användarnamn: <input #username type="text">
+Lösenord: <input #password type="password">
+<button (click)="login(username.value, password.value)">Logga in</button>
