--- a/Client/src/app/main/menubar/menubar.component.html
+++ b/Client/src/app/main/menubar/menubar.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
   <div *ngIf="updatePanel() == 'planning'" style="float: left; color: whitesmoke">Namn: {{patient.Namn}}  Personnummer: {{patient.Personnummer}}</div>
-  <input type="button" value="Logout" style="float: right;">
+  <input type="button" value="Logout" style="float: right;" (click)="loginService.logout()">
 </div>
