Finished visualising month view late dates.

--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -113,7 +113,9 @@
         [locale]="locale"
         [weekStartsOn]="weekStartsOn"
         (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)">
+        (eventTimesChanged)="eventTimesChanged($event)"
+
+        (beforeViewRender) = "beforeWeekViewRender($event)">
       </mwl-calendar-week-view>
 
       <ul>
