--- a/Client/src/app/main/sidebar/planning/buttonpanel/buttonpanel.component.html
+++ b/Client/src/app/main/sidebar/planning/buttonpanel/buttonpanel.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row" >
     <div class="col">
-      <button class="btn btn-primary center-block" (click)="setPanel('overview')">Tillbaka</button>
+      <button class="btn btn-primary center-block" (click)="setPanel('overview'); resetPatient();">Tillbaka</button>
     </div>
     <div class="col"></div>
     <div class="col">
